--- a/threats.tex
+++ b/threats.tex
@@ -24,12 +24,9 @@ Also, for each configuration we have generated 11 different models - per number 
 
 
 %%%------------------------------------------------------------------------------------------
-\subsection{Constructs threats}
+\subsection{Construct threats}
 
 Construct validity concerns whether the used measures are representative or not.
 
 We measured the overall performance of our approach based on the execution time and memory consumption,
 which are widely used in the community. All the experiments have been carried out using the same computing node, which is described in Section \ref{sec:stat:impl}.
-
-
-
