--- a/macros.tex
+++ b/macros.tex
@@ -237,6 +237,7 @@
 
 \newcommand{\straces}[1]{\ensuremath{\mathtt{SuccessfulT}(#1)}}
 \newcommand{\untraces}[1]{\ensuremath{\mathtt{UnsuccessfulT}(#1)}}
+\let\oriprod\prod
 \renewcommand{\prod}{\ensuremath{\mathtt{prod}}}
 \newcommand{\prodp}{\ensuremath{\mathtt{prod}^\calP}}
 \newcommand{\prob}[1]{\ensuremath{\mathtt{prob}\left(#1\right)}}
