--- a/related_work.tex
+++ b/related_work.tex
@@ -101,7 +101,7 @@ calculate the probability of a specific feature.
 There are proposals that allow the introduction of probabilities in
 feature models. For instance \cite{Dubslaff2015} uses Markow Decision
 processes to represent the behavior of products. Whereas in
-\cite{vk13}, the behavior of the system.
+\cite{vk13}, the behavior of the system represented by Markov Chain.
 The variability on those formalisms is modeled existing tools like FODA or
 just propositional logic to describe their products.
 On the contrary, our
