--- a/appendix.tex
+++ b/appendix.tex
@@ -28,7 +28,7 @@
     \(
       \oriprod_{j=1}^{i-2}(1-k_{j}) = 1-\sum_{j=1}^{i-2}p_{j}
     \).
-    And by definition we obtain
+    By definition
     \(
       k_{i-1}=\frac{p_{i-1}}{1-\sum_{j=1}^{i-2}p_{j}}
     \).
