--- a/operational.tex
+++ b/operational.tex
@@ -169,8 +169,8 @@ These properties can be obtained easily when the
 denotational semantics is studied in Section~\ref{sec:stat:den}.
 
 Instead, the $\choice_{p}$ is not symmetric, which makes impossible for
-it to be commutative and associative. Nevertheless we could have
-defined and n-ary operator. Let $n\geq 0$
+it to be commutative and associative. Nevertheless we can
+define a commutative n-ary operator. Let $n\geq 0$
 be a natural number,  $P_{i}\in\fodaPA$ for $1\leq i\leq n$, and
 $p_{i}\in (0,1)$  for $1\leq i\leq n$ such that
 \(1=\sum_{i=1}^{n}p_{i}\). Then we can define the operator
@@ -200,7 +200,7 @@ $P'\in\fodaPA$
 such that
 $P_{i}\tranp{\fA}{q}P'$, iff $P\tranp{\fA}{p_{i}\cdot q}P'$.
 \begin{proof}
-  The proof is in the Appendix.
+  The proof is in the Appendix~\ref{app:proofs}.
 \end{proof}
 \end{proposition}
 
