Cambios de la revisión final

--- a/testing.tex
+++ b/testing.tex
@@ -154,7 +154,7 @@ time in being computed.
 
 We have generated 11 feature models. We can observe in
 Table~\ref{execution_times} that the results are similar in each
-model. That is, mos of  the features require between 80 and 4599 milliseconds to be processed.
+model. That is, most of  the features require between 80 and 4599 milliseconds to be processed.
 % , while there is a small
 % portion of them requiring a processing time between 20 and 36 milliseconds. However, there are unusual situations
 % where a feature require 60 milliseconds to be processed.
