--- a/syntax.tex
+++ b/syntax.tex
@@ -28,9 +28,13 @@ it might not be computed in the final set or trace of valid products.
 This is because of the cross tree constraints presented in the formal
 definition of \fodaPA, more in specific, the \nombreRegla{excl2} and \nombreRegla{excl3} rules.
 %
-These rules, in the case of computing them, the features affected will be marked for hiding,
-this is thanks rules \nombreRegla{hid1} and \nombreRegla{hid2} from
+When these rules are computed, the affected features will be marked for hiding.
+This is carried out by rules \nombreRegla{hid1} and \nombreRegla{hid2} from
 Figure~\ref{fig:oper-hid}.
+%
+%These rules, in the case of computing them, the features affected will be marked for hiding,
+%this is thanks rules \nombreRegla{hid1} and \nombreRegla{hid2} from
+%Figure~\ref{fig:oper-hid}.
 %
 So forth, the features
 disappear in the valid products traces after computing the feature model.
