--- a/introduction.tex
+++ b/introduction.tex
@@ -249,12 +249,12 @@ This  issue is solved by using \fodaPA~\cite{acl13}, a formal framework to repre
 
 It is worth to mention that the order in which features are processed to create a specific product is directly reflected in its final cost. In a previous work we introduced costs in our formal framework for representing the required effort to include a feature to the product under construction~\cite{clc16}. This cost may represent different aspects of a feature, such as lines of code of a given software component or effort, in human hours, to include a software component into a project, just to name a few, that usually depend on the target of the product line organization. Thus, efficiently processing features for building high quality products becomes a time-consuming and challenging task. Unfortunately, there are some situations where the representation of the \SPL\ generates a combinatorial explosion, making unpractical to analyze all possible combinations.
 %
-In order to alleviate this issue, in this paper we propose a probabilistic extension of our previous work \fodaPA. We use probabilistic information to identify those features that are more frequently used by computing the probability of having a feature in a specific \SPL. Hence, the computation focuses on those features with a high probability to be present in the final product, reducing the total computation required for generating valid products.
-The proposed probabilistic extension is tested through a Python implementation.
-In order to show its usefulness, we have conducted an experimental study where different
-models consisting of 3000 features have been analyzed.
-In this case, 247 features have a probability equal to 0.9 to be included in a final product. This means that, at least, the 90\% of the generated products have these 247 features, now,
-doing a partial testing coverage over these feature we will reach an overall 90\% of the products in the partial coverage.
+In order to alleviate this issue, in this paper we propose a probabilistic extension of our previous work \fodaPA. We use probabilistic information to identify those features that are more frequently used by computing the probability of having a feature in a specific \SPL. Hence, the computation focuses on those features with a high probability to be present in the final product, reducing the total computation required for generating valid products, and the proposed probabilistic extension is tested through a Python implementation.
+
+%In order to show its usefulness, we have conducted an experimental study where different
+%models consisting of 3000 features have been analyzed.
+%In this case, 247 features have a probability equal to 0.9 to be included in a final product. This means that, at least, the 90\% of the generated products have these 247 features, now,
+%doing a partial testing coverage over these feature we will reach an overall 90\% of the products in the partial coverage.
 
 The main contributions of this work can be summarized as:
 
@@ -278,9 +278,11 @@ The main contributions of this work can be summarized as:
         \item
         A thorough empirical study, using different configurations to generate a wide-spectrum of variability models. The  study has been carried out in order to show the applicability and scalability of our approach. These variability models have been generated using BeTTy~\cite{sg12}.
 
-        \item
-        A comparison between the overall implementation performance of the probabilistic extension and the denotational semantic implementation from \fodaPA~\cite{acl13}. The obtained results show that the denotational semantics of the probabilistic extension implementation behaves more efficiently both in space and time
-        in comparison with the denotational semantics implementations presented in previous work.
+%        \item
+%        A comparison between the overall implementation performance of the probabilistic extension and
+%        the denotational semantic implementation from \fodaPA~\cite{acl13}. The obtained results show
+%        that the denotational semantics of the probabilistic extension implementation behaves more efficiently both in space and time
+%        in comparison with the denotational semantics implementations presented in previous work.
 
 \end{itemize}
 
