--- a/testing.tex
+++ b/testing.tex
@@ -364,7 +364,7 @@ we are interested in analyzing the performance of the implementation of the prob
 extension. Also, we provide the answers for the research questions.
 
 The experiments carried out in Section~\ref{sec:stat:impl:performance:analysis}
-uses \fodaPAp\ terms containing a maximum of 10000 features. In general,
+use \fodaPAp\ terms containing a maximum of 10000 features. In general,
 these results show that increasing the number of features having a conjunction relation
 has a direct impact on the overall performance. In fact, increasing the number of features having
 a conjunction relation generates a combinatorial explosion that hampers the processing of the \fodaPAp\ terms.
